2009-06-09 Jens Thoms Toerring    <jt@toerring.de>

	Several bug-fixes and changes all over the place to
	get everything working again.

	Flag '--enable-bwc-bs-hack' added to 'configure' to
	allow compliation for programs that rely on the tradi-
	tional behaviour of browsers and scrollbars, i.e. that
	they don't report changes via e.g. fl_do_forms() but
	do invoke a callback if installed.

2009-06-04 Jens Thoms Toerring    <jt@toerring.de>

	lib/tbox.c: Replacement for lib/textbox.c used in all
	browsers.

2009-05-21 Jens Thoms Toerring    <jt@toerring.de>

	Lots of changes to the event handling system. The handler
	routines for objects now are supposed to return information
	about what happend (changes, end of interaction) instead
	of just 1 or 0 (which indicated if the user application
	was to be notified or not. Using the new system makes it
	easier to use objects that consist of child objects e.g.
	when dealing with callbacks for these kinds of objects.

2009-05-17 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: Bug fixed that resulted in crashes when
	in the callback for an object the object itself got deleted.

	* lib/input.c: fl_validate_input() function added.

	* configure.ac, config/common.am, config/texinfo.tex,
	doc/Makefile.am: Documentation added to built system

2009-05-16 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: Objects consisting just of child objects
	weren't handled correctly in that they never got returned
	by fl_do_forms().

	* lib/browser.c, lib/formbrowser.c, lib/scrollbar.c,
	lib/tabfolder.c: these objects now get created with a
	default callback that does nothing to keep them reported
	by fl_do_forms() (for backward compatibility reasons).
	Also quite a bit of cleanup in lib/browser.c

	* lib/spinner.c, lib/include/spinner.h, lib/private/pspinner.h:
	new widget added, very similar to counter object (but realized
	just using already existing objects).

	* lib/child.c, lib/include/Basic.h: fl_add_child() is