@@ -1,3 +1,9 @@
+2009-06-10 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/tbox.c: Bug in handling of new lines and
+	appending to existing lines fixed to make it
+	work liek earlier versions.
+
 2009-06-09 Jens Thoms Toerring    <jt@toerring.de>
 
 	Several bug-fixes and changes all over the place to
